# widget-periodictable

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  Procfile  Profile  README.md  appveyor.yml  codecov.yml  install.json  package-lock.json  package.json  postBuild  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setupbase.py  tsconfig.json  version_check.py  webpack.config.js  widget_periodictable.json
.github/workflows/: .build.yml.swp  binder.yml  binder_autobuild.yml  build.yml  release_and_publish.yml  screenshot-comparison.yml  version_check.py  voila-test.yml
binder/: environment.yml  postBuild
css/: ptable.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  introduction.rst
docs/source/_templates/: footer.html
example/: example.ipynb
examples/: introduction.ipynb
js/: widget.css  widget.js
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
src/widget_periodictable/: __init__.py  utils.py
test/: test.py  test_figures.py
widget_periodictable/: __init__.py  _frontend.py  _version.py  example.py  periodic_table.py  utils.py
widget_periodictable/nbextension/: __init__.py  extension.js
widget_periodictable/nbextension/static/: extension.js
widget_periodictable/tests/: conftest.py  test_example.py  test_nbextension_path.py
