[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget_periodictable"
version = "4.0.5"
dependencies = ["anywidget>=0.9.10"]
readme = "README.md"
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'mendeleev',
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_periodictable/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_periodictable/static/widget.js"]
skip-if-exists = ["src/widget_periodictable/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
