[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-periodictable"
version = "4.1.0"
dependencies = ["anywidget>=0.9.10"]
readme = "README.md"
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'mendeleev',
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "bumpver>=2023"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_periodictable/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_periodictable/static/widget.js"]
skip-if-exists = ["src/widget_periodictable/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.bumpver]
current_version = "v4.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]
