[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-periodictable"
description = 'A jupyter widget of the periodic table of elements.'
version = "4.1.1"
dependencies = ["anywidget~=0.9.10"]
authors = [{ name = "The OSSCAR team" }]
readme = "README.md"
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'mendeleev',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
]
license = { file = 'LICENSE.txt' }
requires-python = '>=3.9'

[project.urls]
Home = 'https://www.osscar.org/'
Source = 'https://github.com/osscar-org/widget-periodictable'

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "bumpver>=2023"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_periodictable/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_periodictable/static/widget.js"]
skip-if-exists = ["src/widget_periodictable/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.bumpver]
current_version = "v4.1.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]
